--- a/code/cpp/Builds/VisualStudio2010/echomesh-client.vcxproj
+++ b/code/cpp/Builds/VisualStudio2010/echomesh-client.vcxproj
@@ -129,6 +129,33 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\yaml-cpp-src\aliasmanager.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\binary.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\contrib\graphbuilder.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\contrib\graphbuilderadapter.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\conversion.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\directives.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\emitfromevents.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\emitter.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\emitterstate.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\emitterutils.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\exp.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\iterator.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\node.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\nodebuilder.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\nodeownership.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\null.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\ostream.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\parser.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\regex.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\scanner.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\scanscalar.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\scantag.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\scantoken.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\simplekey.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\singledocparser.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\stream.cpp"/>
+    <ClCompile Include="..\..\yaml-cpp-src\tag.cpp"/>
     <ClCompile Include="..\..\base64\base64.cpp"/>
     <ClCompile Include="..\..\echomesh\audio\AudioController.cpp"/>
     <ClCompile Include="..\..\echomesh\audio\Envelope.cpp"/>
@@ -152,35 +179,6 @@
     <ClCompile Include="..\..\rec\audio\format\RegisterFormats.cpp"/>
     <ClCompile Include="..\..\rec\audio\OutputSampleRate.cpp"/>
     <ClCompile Include="..\..\rec\util\thread\Trash.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\aliascontent.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\aliasmanager.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\content.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\conversion.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\directives.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\emitfromevents.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\emitter.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\emitterstate.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\emitterutils.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\exp.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\iterator.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\map.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\node.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\nodebuilder.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\null.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\ostream.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\parser.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\parserstate.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\regex.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\scalar.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\scanner.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\scanscalar.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\scantag.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\scantoken.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\sequence.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\simplekey.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\singledocparser.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\stream.cpp"/>
-    <ClCompile Include="..\..\yaml-cpp-src\tag.cpp"/>
     <ClCompile Include="..\..\JuceLibraryCode\modules\juce_audio_basics\buffers\juce_AudioDataConverters.cpp">
       <ExcludedFromBuild>true</ExcludedFromBuild>
     </ClCompile>
@@ -1265,6 +1263,30 @@
     <ClCompile Include="..\..\JuceLibraryCode\modules\juce_video\juce_video.cpp"/>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\yaml-cpp-src\collectionstack.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\contrib\graphbuilderadapter.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\directives.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\emitterstate.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\emitterutils.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\exp.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\indentation.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\iterpriv.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\nodebuilder.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\nodeownership.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\ptr_stack.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\ptr_vector.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\regex.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\regeximpl.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\scanner.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\scanscalar.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\scantag.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\setting.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\singledocparser.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\stream.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\streamcharsource.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\stringsource.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\tag.h"/>
+    <ClInclude Include="..\..\yaml-cpp-src\token.h"/>
     <ClInclude Include="..\..\base64\base64.h"/>
     <ClInclude Include="..\..\echomesh\audio\AudioController.h"/>
     <ClInclude Include="..\..\echomesh\audio\Envelope.h"/>
@@ -1327,34 +1349,6 @@
     <ClInclude Include="..\..\rec\util\thread\Pointer.h"/>
     <ClInclude Include="..\..\rec\util\thread\Result.h"/>
     <ClInclude Include="..\..\rec\util\thread\Trash.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\aliascontent.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\collectionstack.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\content.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\directives.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\emitterstate.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\emitterutils.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\exp.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\indentation.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\iterpriv.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\ltnode.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\map.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\nodebuilder.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\parserstate.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\ptr_stack.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\regex.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\regeximpl.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\scalar.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\scanner.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\scanscalar.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\scantag.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\sequence.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\setting.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\singledocparser.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\stream.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\streamcharsource.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\stringsource.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\tag.h"/>
-    <ClInclude Include="..\..\yaml-cpp-src\token.h"/>
     <ClInclude Include="..\..\JuceLibraryCode\modules\juce_audio_basics\buffers\juce_AudioDataConverters.h"/>
     <ClInclude Include="..\..\JuceLibraryCode\modules\juce_audio_basics\buffers\juce_AudioSampleBuffer.h"/>
     <ClInclude Include="..\..\JuceLibraryCode\modules\juce_audio_basics\buffers\juce_FloatVectorOperations.h"/>
