--- a/code/cpp/Builds/VisualStudio2010/echomesh-client.vcxproj
+++ b/code/cpp/Builds/VisualStudio2010/echomesh-client.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="..\..\base64\base64.cpp"/>
     <ClCompile Include="..\..\echomesh\audio\AudioController.cpp"/>
     <ClCompile Include="..\..\echomesh\audio\Envelope.cpp"/>
+    <ClCompile Include="..\..\echomesh\audio\EnvelopeValuePlayer.cpp"/>
     <ClCompile Include="..\..\echomesh\audio\GetReader.cpp"/>
     <ClCompile Include="..\..\echomesh\audio\MidiController.cpp"/>
     <ClCompile Include="..\..\echomesh\audio\PlaybackAudioSource.cpp"/>
@@ -1290,6 +1291,7 @@
     <ClInclude Include="..\..\base64\base64.h"/>
     <ClInclude Include="..\..\echomesh\audio\AudioController.h"/>
     <ClInclude Include="..\..\echomesh\audio\Envelope.h"/>
+    <ClInclude Include="..\..\echomesh\audio\EnvelopeValuePlayer.h"/>
     <ClInclude Include="..\..\echomesh\audio\GetReader.h"/>
     <ClInclude Include="..\..\echomesh\audio\MidiController.h"/>
     <ClInclude Include="..\..\echomesh\audio\PlaybackAudioSource.h"/>
