--- a/code/python/echomesh/config/config.yml
+++ b/code/python/echomesh/config/config.yml
@@ -125,14 +125,9 @@ audio:
     player: pyaudio
 
 
-# This little section controls whether you're running a control program
-# or a slave program, and whether that control program uses a Tk/GUI
-# interface (which isn't built yet).
-
-control_program:
-  enable: true
-  use_tk: true
-  use_curses: false
+# Do we get and process commands from the keyboard?
+# Set this to "false" for autostart jobs.
+control_program: true
 
 delay_before_keyboard_activates: 0.5 seconds
 
