--- a/code/python/echomesh/config/config.yml
+++ b/code/python/echomesh/config/config.yml
@@ -26,10 +26,10 @@ autosave: true
 autostart: false
 
 audio:
-   # This audio section is the longest section in the whole config file.
+   # The audio section is the longest section in the whole config file.
 
   input:
-    # This long section configures the audio input, usually a microphone.
+    # This section configures the audio input, usually a microphone.
 
     chunk_size: 1024   # The number of samples in one chunk.
 
@@ -124,9 +124,9 @@ audio:
 
     player: pyaudio
 
-
 # Do we get and process commands from the keyboard?
 # Set this to "false" for autostart jobs.
+# TODO: this needs to be rethought and perhaps re-integrated with autostart.
 control_program: true
 
 delay_before_keyboard_activates: 0.5 seconds
