Moved dictionary utilities into a subdirectory, too.

--- a/code/python/echomesh/config/config.yml
+++ b/code/python/echomesh/config/config.yml
@@ -207,7 +207,7 @@ light:
     show: true
     type: client
     period: 10ms
-    visualizer_closes_echomesh: false
+    closes_echomesh: false
 
     background: white
     layout: [16, 16]
