Start to change timeouts.

--- a/code/python/echomesh/config/config.yml
+++ b/code/python/echomesh/config/config.yml
@@ -178,6 +178,8 @@ network:
     port: 1238
     timeout: 100ms
 
+  timeout: 100ms
+
 # The git section sets the user, project name and server for a git repository
 # connected to the echomesh project.  Please note that you'll still have to
 # authenticate your machine to your git host if you want to check in changes
