Continuing the change to timeouts.

--- a/code/python/echomesh/config/config.yml
+++ b/code/python/echomesh/config/config.yml
@@ -172,13 +172,13 @@ network:
     pipe_stdout: true
     port: 1239
     start: true
-    timeout: 100ms
+    timeout: 0.1
 
   discovery:
     port: 1238
-    timeout: 100ms
+    timeout: 0.1
 
-  timeout: 100ms
+  timeout: 0.1
 
 # The git section sets the user, project name and server for a git repository
 # connected to the echomesh project.  Please note that you'll still have to
