--- a/command/master/score/light2.yml
+++ b/command/master/score/light2.yml
@@ -13,7 +13,7 @@ patterns:
     pattern:
       -
         type: insert
-        begin: 32
+        offset: 32
         pattern:
           type: spread
           colors: [white, red]
