Move all the Cython over to the cpp directory.

--- a/code/cpp/.gitignore
+++ b/code/cpp/.gitignore
@@ -1,3 +1,6 @@
-*.bin
-
+*.cpp
+*.so
+build/
+Builds/MacOSX/echomesh.xcodeproj/xcuserdata/
+Builds/MacOSX/echomesh.xcodeproj/project.xcworkspace/xcuserdata/
 Builds/MacOSX/echomesh-client.xcodeproj/xcuserdata/
